# starter-auth/bc/adapter/controller/user_authorization_code.go
@@ -27,11 +27,11 @@ func (u *UserAuthorizationCodeController) GetOption() defs.ControllerOption {
 }
 
 // Handle 用户登录获得授权码，注意授权码不是Token，不能直接用于访问接口
-// @Tags auth
+// @Tags user
 // @Summary 登录验证用户账号密码，验证通过后在Redis保存一个授权码60秒有效，关联用户信息。用以可以用授权码接口换取登录Token。
 // @accept application/json
 // @Produce application/json
-// @Param "Tenant-ID" header string true "租户ID"
+// @Param Tenant-ID header string true "租户ID"
 // @Param data body vo.UserAuthorizationCodeReqVO true "用户登录获得授权码，注意授权码不是Token，不能直接用于访问接口"
 // @Success 200 {object} response.Response{data=vo.UserAuthorizationCodeRspVO}
 // @Router /user-authorization-code [post]
@@ -39,7 +39,8 @@ func (u *UserAuthorizationCodeController) Handle(c *gin.Context) {
 	var userAuthorizationCodeReqVO vo.UserAuthorizationCodeReqVO
 	ctx, err := uctx.ShouldBindJSON(c, &userAuthorizationCodeReqVO)
 	if err == nil {
-		code, url, err := u.UserApp.UserAuthorizationCode(ctx,
+		var code, url string
+		code, url, err = u.UserApp.UserAuthorizationCode(ctx,
 			userAuthorizationCodeReqVO.UserName,
 			userAuthorizationCodeReqVO.Password,
 			userAuthorizationCodeReqVO.RedirectUrl)
